# ClusterHealthDetect

./: .gitignore  LICENSE  README.md  pyproject.toml
cluster_health_detect/: __init__.py  affinity.py  affinity_probe.py  benchmark.py  core_h2d_matrix.py  core_pair_d2d_matrix.py  excel_heatmap.py  matrix_excel.py  matrix_png.py  numa_affinity_benchmark.py  summarize.py
reports/: A3-180-copy-sweep-20260708.json  A3-180-core-h2d-matrix-clean-64MB-20260708.xlsx  A3-180-h2d-d2d-hccl-size-sweep-20260708.csv  A3-180-hccl-buff1024-sweep-20260708.json  A3-180-hccl-buff200-sweep-20260708.json  A3-180-hccl-buff32-sweep-20260708.json  A3-180-hccl-default-sweep-20260708.json  A3-180-size-sweep-h2d-d2d-hccl-20260708.md  A3-clean-core-matrix-report.md  A3-core-h2d-matrix-clean-20260707.xlsx  A3-core-h2d-matrix-full.xlsx  A3-core-h2d-matrix-smoke.xlsx  A3-core-matrix-smoke.md  A3-core-pair-d2d-matrix-smoke.xlsx  A3-cross-node-h2d-npu0-report.md  A3-full-core-matrix-report.md  A3-numa-affinity-smoke-heatmap.xlsx  A3-numa-affinity-smoke.md  A3-validation.md
scripts/: build_excel_heatmap.sh  collect_env.sh  run_affinity_probe.sh  run_core_h2d_matrix.sh  run_core_pair_d2d_matrix.sh  run_multinode.sh  run_numa_affinity_matrix.sh  run_single_node.sh
